# playwrightExample

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: playwright-tests.yml
config/: __init__.py  settings.py
docs/: ARCHITECTURE_REVIEW.md
pages/: __init__.py  base_page.py  cart_page.py  checkout_page.py  components.py  login_page.py  navigator.py  page_helpers.py  products_page.py
pages/checkout/: __init__.py  complete_page.py  info_page.py  overview_page.py
pages/components/: __init__.py  burger_menu.py  cart_icon.py  cart_item.py  error_banner.py  price_summary.py  product_card.py
tests/: conftest.py
tests/cart/: test_cart.py
tests/checkout/: test_checkout.py
tests/e2e/: test_complete_purchase_flow.py
tests/login/: test_login.py
tests/products/: test_products.py
utils/: __init__.py  decorators.py  exceptions.py  helpers.py  logger.py
