# ============================================================================
# Python Project Configuration
# ============================================================================
# This file contains project metadata and configuration for various Python
# tools including build system, linting, formatting, and type checking.
# ============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saucedemo-playwright-framework"
version = "1.0.0"
description = "Production-grade E2E testing framework using Playwright and pytest"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["playwright", "pytest", "e2e", "testing", "automation", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ============================================================================
# Ruff Configuration (Fast Python Linter & Formatter)
# ============================================================================
# Ruff is an extremely fast Python linter written in Rust
# Docs: https://docs.astral.sh/ruff/
# ============================================================================

[tool.ruff]
# Set the line length for code formatting
line-length = 100
target-version = "py311"

# File patterns to exclude from linting
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "reports",
    "logs",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule categories
# See: https://docs.astral.sh/ruff/rules/
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]

# Rules to ignore
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

# Allow autofix for specific rule categories
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
    "PLR2004",  # Magic values are OK in tests
    "S101",     # Use of assert is OK in tests
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["config", "pages", "utils", "fixtures"]
force-sort-within-sections = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "auto"

# ============================================================================
# Black Configuration (Code Formatter)
# ============================================================================
# Black is the uncompromising Python code formatter
# Docs: https://black.readthedocs.io/
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
  | venv
  | reports
  | logs
  | __pycache__
)/
'''

# ============================================================================
# MyPy Configuration (Static Type Checker)
# ============================================================================
# MyPy is a static type checker for Python
# Docs: https://mypy.readthedocs.io/
# ============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

# Ignore missing imports for third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "pytest_playwright.*",
    "allure.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration (Alternative to pytest.ini)
# ============================================================================
# Configuration can also be specified here instead of pytest.ini
# Keeping pytest.ini for clarity and convention
# ============================================================================

[tool.pytest.ini_options]
# This section is optional if you're using pytest.ini
# Included here for reference and flexibility
